--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
     "files.associations": {
-        "c언어": "c",
-        "3개 최대공약수": "c"
-    },
-    "C_Cpp.errorSquiggles": "disabled"
+        "재귀함수 삼각형": "c"
+    }
 }
